[package]
name = "uurl"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"                                                                     # https://spdx.org/licenses/
authors = ["Elio Grieco <grieco@egx.com>"]
description = "A transformer and manipulator for Urls. Can be used via CLI or as a library."
repository = "https://github.com/symplasma/uurl"
readme = "README.md"
keywords = ["url", "convert", "transform", "extract", "highlight"]                           # free text
categories = ["command-line-utilities"]                                                      # https://crates.io/category_slugs
exclude = [".vscode/*", ".gitignore", ".aider.*"]
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "uurl"
path = "src/main.rs"

[lib]
name = "uurl"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
arboard = "3.0"
atty = "0.2"
linkify = "0.10.0"
yansi = { version = "1.0.1", features = ["hyperlink"] }
csscolorparser = { version = "0.7.2", features = ["serde"] }
color-eyre = "0.6.5"
