[package]
name = "uurl"
version = "0.1.3"
edition = "2024"
license = "BSD-3-Clause"                                                                     # https://spdx.org/licenses/
authors = ["Elio Grieco <grieco@egx.com>"]
description = "A transformer and manipulator for Urls. Can be used via CLI or as a library."
repository = "https://github.com/symplasma/uurl"
readme = "README.md"
keywords = ["url", "convert", "transform", "extract", "highlight"]                           # free text
categories = ["command-line-utilities"]                                                      # https://crates.io/category_slugs
exclude = [".vscode/*", ".gitignore", ".aider.*"]
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "uurl"
path = "src/main.rs"

[lib]
name = "uurl"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
arboard = "3.0"
atty = "0.2"
linkify = "0.10.0"
yansi = { version = "1.0.1", features = ["hyperlink"] }
csscolorparser = { version = "0.7.2", features = ["serde"] }
color-eyre = "0.6.5"
url = "2.5"
webpage = "2.0.1"
open = "5"

[lints.clippy]
single_match = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "deny"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"
as_conversions = "warn"
assertions_on_result_states = "warn"
bool_to_int_with_if = "warn"
case_sensitive_file_extension_comparisons = "warn"
checked_conversions = "warn"
clone_on_ref_ptr = "warn"
comparison_chain = "warn"
create_dir = "warn"
dbg_macro = "warn"
default_trait_access = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
doc_comment_double_space_linebreaks = "warn"
doc_include_without_cfg = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
else_if_without_else = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
exit = "warn"
expect_used = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filetype_is_file = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
format_collect = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
ignored_unit_patterns = "warn"
index_refutable_slice = "warn"
indexing_slicing = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
invalid_upcast_comparisons = "warn"
ip_constant = "warn"
items_after_statements = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_over_hash_type = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
many_single_char_names = "warn"
map_unwrap_or = "warn"
map_with_unused_argument_over_ranges = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
needless_raw_string_hashes = "warn"
needless_raw_strings = "warn"
no_effect_underscore_binding = "warn"
non_ascii_literal = "warn"
non_std_lazy_statics = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
panic = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
pattern_type_mismatch = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_underscore_fields = "warn"
pub_use = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
redundant_type_annotations = "warn"
ref_binding_to_reference = "warn"
ref_option = "warn"
ref_option_ref = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
return_self_not_must_use = "warn"
same_functions_in_if_condition = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_if_nothing_returned = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
single_call_fn = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
str_to_string = "warn"
string_add_assign = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
struct_excessive_bools = "warn"
struct_field_names = "warn"
tests_outside_test_module = "warn"
todo = "warn"
trivially_copy_pass_by_ref = "warn"
try_err = "warn"
unchecked_duration_subtraction = "warn"
undocumented_unsafe_blocks = "warn"
unicode_not_nfc = "warn"
unimplemented = "warn"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_semicolon = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unsafe_derive_deserialize = "warn"
unseparated_literal_suffix = "warn"
unused_async = "warn"
unused_result_ok = "warn"
unused_self = "warn"
unused_trait_names = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
verbose_file_reads = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"
absolute_paths = "warn"
arithmetic_side_effects = "warn"
cast_possible_truncation = "warn"
default_numeric_fallback = "warn"
map_flatten = "warn"
redundant_closure = "warn"
uninlined_format_args = "warn"
